showing working steps after the calculaion.
